
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 APR 17a
  * in bin
    - reverted combustion_vacuum.wrp setup to how it was before 19feb16a (setup was changed since
      then erroneously)


2019 APR 14a
  * in cycle/restime/_Trapezoidal/restime.c
    - in add_Z_dUstar_residual(), took away dependence of the residual on 
      gl->cycle.restime.weightm1_trapezoidal_default
  * in cycle/share/ts_share.c
    - in add_Z_dUstardt_dUstar_to_TDMA(), took away dependence of the residual on 
      gl->cycle.restime.weightm1_trapezoidal_default
  * in cycle/resconv/_none/resconv.hh
    - took away definition of CONVJACOBIAN (not needed anymore)
  * in bin
    - updated discharge.wrp


2019 APR 13b
  * in cycle/res/_generic/res.c
    - in add_dDstarU_residual(), fixed typo: double weightm1 should be double weightp0
  * in bin
    - updated ns_SDBD.wrp 


2019 APR 13a
  * in tools/average.c
    - implemented error messages if filenames given on the command line are too long (Prasanna)
  * in bin
    - updated Noh2D.wrp


2019 APR 12a
  * in cycle/res/_generic/res.c
    - in add_dKstar_dG_residual(), add_dDstarU_residual(), add_Ystar_dH_residual(), got rid
      of arguments fact and fact_trapezoidal and rather made residual addition function of 
      gl->cycle.restime.weightm1_trapezoidal_default
    - in update_residual(), got rid of fact and fact_trapezoidal 
  * in cycle/resconv/_*/resconv.c
    - in add_dFstar_residual(), got rid of arguments fact and fact_trapezoidal and rather made 
      residual addition function of gl->cycle.restime.weightm1_trapezoidal_convection
  * in cycle/ressource/_*/ressource.c
    - in add_Sstar_residual() got rid of arguments fact and fact_trapezoidal and rather made 
      residual addition function of gl->cycle.restime.weightm1_trapezoidal_default